k8s-config/account-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-app-deployment
  labels:
    app: account-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-app
  template:
    metadata:
      labels:
        app: account-app
    spec:
      containers:
        - name: account-app
          image: pyordan/account_service:1.0
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: account-app-service
spec:
  selector:
    app: account-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
