k8s-config/api-gateway-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app-deployment
  labels:
    app: api-gateway-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: pyordan/api_gateway:1.3
          ports:
          - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-app-service
spec:
  selector:
    app: api-gateway-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
