k8s-config/order-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app-deployment
  labels:
    app: order-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
        - name: order-app
          image: pyordan/order_service:1.1
          ports:
          - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: order-app-service
spec:
  selector:
    app: order-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
