k8s-config/payment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app-deployment
  labels:
    app: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payment-app
          image: pyordan/payment_service:1.1
          ports:
          - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app-service
spec:
  selector:
    app: payment-app
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
