k8s-config/product-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app-deployment
  labels:
    app: product-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product-app
          image: pyordan/product_service:1.0
          ports:
          - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: product-app-service
spec:
  selector:
    app: product-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
