k8s-config/stock-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-app-deployment
  labels:
    app: stock-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-app
  template:
    metadata:
      labels:
        app: stock-app
    spec:
      containers:
        - name: stock-app
          image: pyordan/stock_service:1.1
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: stock-app-service
spec:
  selector:
    app: stock-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
