k8s-config/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-gateway-app
            port:
              number: 9000
